# trading-agent-selfimprove

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
hermes_trading/: __init__.py  briefing.py  config.py  loop.py  paths.py  reflect.py  run.py  scheduler.py  score.py
hermes_trading/adapters/: __init__.py  base.py  macro.py  news.py  onchain.py  price.py
prompts/: 00_master_context.md  hermes_briefing_template.md  phase_01_environment_check.md  phase_02_define_strategy.md  phase_03_scaffold_worker.md  phase_04_deploy_worker_to_railway.md  phase_05_first_reflection_cycle.md  phase_06_install_hermes_on_railway.md  phase_07_handoff_to_hermes.md
state/: goal.yaml  heartbeat.json  hermes_briefing.md  hypotheses.jsonl
