[project]
name = "hermes-trading"
version = "0.1.0"
description = "Paper-mode self-improving trading worker for Railway"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "ccxt>=4.3.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.0",
    "rich>=13.7.0",
    "yfinance>=0.2.40",
]

[project.scripts]
hermes-trading = "hermes_trading.run:main"
hermes-briefing = "hermes_trading.briefing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
